# nemo-ai-demo-example-1

./: IMPLEMENTATION_SUMMARY.md  README.md  app.py  cdk_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  template.yaml  test_moderation.py
infrastructure/: ai_image_analyzer_stack.py
src/: app.py  image_analyzer.py  schemas.py  storage.py
