[tool.poetry]
name = "ai-image-analyzer"
version = "0.1.0"
description = "A demo application to showcase AWS Powertools for Python, featuring AI-powered image analysis."
authors = ["Nemo AI Agent"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = {extras = ["all"], version = "^2.40.0"}
boto3 = "^1.34.135"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"